--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -25,7 +25,7 @@ msgstr ""
 msgid ""
 "\n"
 "<This tuner is configured automatically>"
-msgstr ""
+msgstr "Este tuner é configurado automaticamente"
 
 msgid ""
 "\n"
@@ -80,7 +80,7 @@ msgid ""
 "Online update of your %s %s software."
 msgstr ""
 "\n"
-"Atualização online do software do receptor."
+"Atualização online do software do receptor %s %s."
 
 msgid ""
 "\n"
@@ -106,7 +106,7 @@ msgid ""
 "Restore your %s %s with a new firmware."
 msgstr ""
 "\n"
-"Restaurar seu receptor com um firmware novo."
+"Restaurar seu receptor %s %s com um firmware novo."
 
 msgid ""
 "\n"
